# selecttranslate

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
assets/: styles.css
debian/: changelog  control  install  rules  selecttranslate.desktop
src/translator/: __init__.py  config.py  main.py
src/translator/core/: __init__.py  clipboard.py  dictionary.py  translator.py
src/translator/core/providers/: __init__.py  apertium.py  base.py  google.py  libretranslate.py
src/translator/ui/: __init__.py  config_window.py  main_window.py  styles.py
src/translator/utils/: __init__.py  logging_config.py  positioning.py
tests/: __init__.py  test_config.py  test_translation.py
